--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
-name: Deploy Frontend (Vue.js) to Azure VM
+name: Build and Deploy Vue.js Frontend to Azure VM
 
 on:
-  workflow_dispatch:   # Manual trigger
+  workflow_dispatch:   # Trigger the workflow manually
 
 jobs:
   deploy:
@@ -11,21 +11,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Install dependencies and build Vue.js app
-        run: |
-          npm install
-          npm run build
-
-      - name: Build Docker image for Vue.js
+      - name: Build Docker image for Vue.js app
         run: |
           docker build -t javanese-chess-fe .
 
-      - name: Upload Vue.js Docker image to VM
+      - name: Upload Docker image to VM
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VM_HOST }}
@@ -34,7 +27,7 @@ jobs:
           source: "Dockerfile,dist"
           target: "~/javanese-chess-fe"
 
-      - name: Deploy Vue.js on VM
+      - name: Deploy Vue.js to Azure VM
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.VM_HOST }}
