--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
-name: Build and Deploy Vue.js Frontend to Azure VM
+name: Deploy to Azure VM (Frontend Docker)
 
 on:
-  workflow_dispatch:   # Trigger the workflow manually
+  workflow_dispatch:   # trigger manually
 
 jobs:
   deploy:
@@ -11,23 +11,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-      - name: Build Docker image for Vue.js app
+      - name: Install dependencies and build the Vue.js app
         run: |
-          docker build -t javanese-chess-fe .
+          npm install
+          npm run build
 
-      - name: Upload Docker image to VM
+      - name: Upload files to VM
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "Dockerfile,dist"
+          source: "dist,Dockerfile"
           target: "~/javanese-chess-fe"
 
-      - name: Deploy Vue.js to Azure VM
+      - name: Deploy container on VM
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.VM_HOST }}
@@ -35,11 +38,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           command_timeout: 15m
           script: |
-            # Stop and remove old container if running
-            docker stop javanese-chess-fe || true
-            docker rm javanese-chess-fe || true
-            
-            # Run the new container
-            docker run -d -p 5000:5173 --name javanese-chess-fe javanese-chess-fe
-
-            echo "✅ Vue.js deployed successfully!"
+            cd ~/javanese-chess-fe
+            docker stop vue-app || true
+            docker rm vue-app || true
+            docker build -t javanese-chess-fe .
+            docker run -d -p 5000:5173 --restart=always --name vue-app javanese-chess-fe
+            echo "✅ Frontend deployment complete"
